<resources>
    <string name="app_name">Epg Test</string>
    <string name="home_navigation">Home</string>
    <string name="live_navigation">Live</string>
    <string name="tv_guide_navigation">Tv Guide</string>
    <string name="catch_up_navigation">Catch up</string>
    <string name="library_navigation">Library</string>
    <string name="load_channels_error">There has been an error retrieving the channels information</string>
    <string name="cast_header">Cast:\u0020\u0020</string>
    <string name="creators_header">Creators:\u0020\u0020</string>
    <string name="common_separator">\u0020\u0020</string>
    <string name="comma_separator">,\u0020</string>
    <string name="live_tag">LIVE</string>
    <string name="guide">GUIDE</string>
    <string name="library">LIBRARY</string>
    <string name="favorite_status_updated">Favorite status updated</string>
</resources>
