<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_home"
        android:title="@string/home_navigation"/>

    <item
        android:id="@+id/live_navigation"
        android:icon="@drawable/ic_live"
        android:title="@string/live_navigation"/>

    <item
        android:id="@+id/tv_guide_navigation"
        android:icon="@drawable/ic_guide"
        android:title="@string/tv_guide_navigation"/>

    <item
        android:id="@+id/catch_up_navigation"
        android:icon="@drawable/ic_catch_up"
        android:title="@string/catch_up_navigation"/>

    <item
        android:id="@+id/library_navigation"
        android:icon="@drawable/ic_library"
        android:title="@string/library_navigation"/>

</menu>